# lz4_rust

./: Cargo.toml  lib.rs
src/lib/: lz4.rs  lz4frame.rs  lz4hc.rs  xxhash.rs
src/programs/: bench.rs  datagen.rs  lz4cli.rs  lz4io.rs
